--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/base.css">
+  <script src="./js/script.js" defer></script>
   <title>Base Apparel coming soon page (Frontend Mentor Challenge)</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
     <footer class="footer">
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Sam B. Morris</a>.
+        Coded by <a href="https://github.com/divinestylus">Sam B. Morris</a>.
       </p>
     </footer>
 
