--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1 class="card-heading"><span class="card-heading-highlight-light">We're</span> <span class="card-heading-highlight-neutral">coming soon</span></h1>
       <p class="card-text">Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>
       <form action="POST" class="card-form">
-        <input type="email" class="card-form-input" placeholder="Email Address">
+        <input type="text" class="card-form-input" placeholder="Email Address">
         <img src="./images/icon-error.svg" alt="" class="card-form-error-icon">
         <button type="submit" class="card-form-button"><img src="./images/icon-arrow.svg" alt=""></button>
       </form>
