Add full project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/base.css">
   <script src="./js/script.js" defer></script>
-  <title>Base Apparel coming soon page (Frontend Mentor Challenge)</title>
+  <title>Base Apparel (Frontend Mentor Challenge)</title>
 </head>
 <body>
 
